Fix cursor not showing for shop

--- a/code/ui/Hud.razor.scss
+++ b/code/ui/Hud.razor.scss
@@ -1,6 +1,5 @@
 Hud {
     font-size: 25px;
-    pointer-events: none;
     color: white;
     cursor: none;
 
